Fix spacing of search results

--- a/wp-content/themes/ednc-roots/assets/app/sass/layouts/_archives.scss
+++ b/wp-content/themes/ednc-roots/assets/app/sass/layouts/_archives.scss
@@ -1,5 +1,7 @@
 .archive, .search {
   .hentry {
+    margin: 0 0 3em;
+    
     h2 {
       margin-top: 0;
       font-size: 30px;
